test: 增加pcap发包测试用例.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ project(net)
 set(CMAKE_C_STANDARD 99)
 
 LINK_DIRECTORIES(
-    ${PROJECT_SOURCE_DIR}/npcap/Lib/x64
+    ${PROJECT_SOURCE_DIR}/npcap/Lib
 )
 
 # 给visual studio编译器使用的宏，Enable GCC debug
@@ -14,12 +14,12 @@ add_definitions(-D_CRT_SECURE_NO_WARNINGS -g)
 
 include_directories(
         ${PROJECT_SOURCE_DIR}
-        ${PROJECT_SOURCE_DIR}/../npcap/Include          # pcap路径
+        ${PROJECT_SOURCE_DIR}/npcap/Include          # pcap路径
         ${PROJECT_SOURCE_DIR}/include
 )
 
 # 搜索src下面的所有源文件，生成文件列表
-file(GLOB_RECURSE SOURCE_LIST "src/*.c" "src/*.h")
+file(GLOB_RECURSE SOURCE_LIST "src/*.c" "src/*.h" "test/*.c")
 add_executable(${PROJECT_NAME} ${SOURCE_LIST})
 add_definitions(-DNET_DRIVER_PCAP)    # use pcap
 
